logs/2024-01-05-15-53/build/bioconductor_docker-3.19/x86_64/KBoost
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''KBoost'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-03 r85769)
Installing package(s) 'KBoost'
also installing the dependencies ‘pillar’, ‘cachem’, ‘memoise’, ‘sass’, ‘ellipsis’, ‘vctrs’, ‘rematch2’, ‘tibble’, ‘bslib’, ‘fontawesome’, ‘htmltools’, ‘jquerylib’, ‘stringr’, ‘lifecycle’, ‘pkgload’, ‘rlang’, ‘waldo’, ‘rmarkdown’, ‘testthat’

trying URL 'https://cloud.r-project.org/src/contrib/pillar_1.9.0.tar.gz'
Content type 'application/x-gzip' length 444528 bytes (434 KB)
==================================================
downloaded 434 KB

trying URL 'https://cloud.r-project.org/src/contrib/cachem_1.0.8.tar.gz'
Content type 'application/x-gzip' length 26510 bytes (25 KB)
==================================================
downloaded 25 KB

trying URL 'https://cloud.r-project.org/src/contrib/memoise_2.0.1.tar.gz'
Content type 'application/x-gzip' length 17852 bytes (17 KB)
==================================================
downloaded 17 KB

trying URL 'https://cloud.r-project.org/src/contrib/sass_0.4.8.tar.gz'
Content type 'application/x-gzip' length 3025474 bytes (2.9 MB)
==================================================
downloaded 2.9 MB

trying URL 'https://cloud.r-project.org/src/contrib/ellipsis_0.3.2.tar.gz'
Content type 'application/x-gzip' length 8066 bytes
==================================================
downloaded 8066 bytes

trying URL 'https://cloud.r-project.org/src/contrib/vctrs_0.6.5.tar.gz'
Content type 'application/x-gzip' length 969066 bytes (946 KB)
==================================================
downloaded 946 KB

trying URL 'https://cloud.r-project.org/src/contrib/rematch2_2.1.2.tar.gz'
Content type 'application/x-gzip' length 13366 bytes (13 KB)
==================================================
downloaded 13 KB

trying URL 'https://cloud.r-project.org/src/contrib/tibble_3.2.1.tar.gz'
Content type 'application/x-gzip' length 565982 bytes (552 KB)
==================================================
downloaded 552 KB

trying URL 'https://cloud.r-project.org/src/contrib/bslib_0.6.1.tar.gz'
Content type 'application/x-gzip' length 6059587 bytes (5.8 MB)
==================================================
downloaded 5.8 MB

trying URL 'https://cloud.r-project.org/src/contrib/fontawesome_0.5.2.tar.gz'
Content type 'application/x-gzip' length 1281884 bytes (1.2 MB)
==================================================
downloaded 1.2 MB

trying URL 'https://cloud.r-project.org/src/contrib/htmltools_0.5.7.tar.gz'
Content type 'application/x-gzip' length 134681 bytes (131 KB)
==================================================
downloaded 131 KB

trying URL 'https://cloud.r-project.org/src/contrib/jquerylib_0.1.4.tar.gz'
Content type 'application/x-gzip' length 520207 bytes (508 KB)
==================================================
downloaded 508 KB

trying URL 'https://cloud.r-project.org/src/contrib/stringr_1.5.1.tar.gz'
Content type 'application/x-gzip' length 176599 bytes (172 KB)
==================================================
downloaded 172 KB

trying URL 'https://cloud.r-project.org/src/contrib/lifecycle_1.0.4.tar.gz'
Content type 'application/x-gzip' length 107656 bytes (105 KB)
==================================================
downloaded 105 KB

trying URL 'https://cloud.r-project.org/src/contrib/pkgload_1.3.3.tar.gz'
Content type 'application/x-gzip' length 77929 bytes (76 KB)
==================================================
downloaded 76 KB

trying URL 'https://cloud.r-project.org/src/contrib/rlang_1.1.2.tar.gz'
Content type 'application/x-gzip' length 763521 bytes (745 KB)
==================================================
downloaded 745 KB

trying URL 'https://cloud.r-project.org/src/contrib/waldo_0.5.2.tar.gz'
Content type 'application/x-gzip' length 39711 bytes (38 KB)
==================================================
downloaded 38 KB

trying URL 'https://cloud.r-project.org/src/contrib/rmarkdown_2.25.tar.gz'
Content type 'application/x-gzip' length 2188934 bytes (2.1 MB)
==================================================
downloaded 2.1 MB

trying URL 'https://cloud.r-project.org/src/contrib/testthat_3.2.1.tar.gz'
Content type 'application/x-gzip' length 739745 bytes (722 KB)
==================================================
downloaded 722 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/KBoost_1.11.0.tar.gz'
Content type 'application/x-gzip' length 512764 bytes (500 KB)
==================================================
downloaded 500 KB

* installing *source* package ‘rlang’ ...
** package ‘rlang’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG -I./rlang/  -I/usr/local/include   -fvisibility=hidden -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c capture.c -o capture.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -I./rlang/  -I/usr/local/include   -fvisibility=hidden -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c internal.c -o internal.o
In file included from internal/internal.c:32,
                 from internal.c:1:
internal/tests.c: In function ‘ffi_test_Rf_warning’:
internal/tests.c:104:3: error: format not a string literal and no format arguments [-Werror=format-security]
  104 |   Rf_warning(r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_error’:
internal/tests.c:108:3: error: format not a string literal and no format arguments [-Werror=format-security]
  108 |   Rf_error(r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_warningcall’:
internal/tests.c:113:3: error: format not a string literal and no format arguments [-Werror=format-security]
  113 |   Rf_warningcall(call, r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_errorcall’:
internal/tests.c:117:3: error: format not a string literal and no format arguments [-Werror=format-security]
  117 |   Rf_errorcall(call, r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: internal.o] Error 1
ERROR: compilation failed for package ‘rlang’
* removing ‘/tmp/tmp/built/rlang’
* installing *source* package ‘KBoost’ ...
** using staged installation
** R
** data
*** moving datasets to lazyload DB
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘KBoost’ as ‘KBoost_1.11.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (KBoost)
ERROR: dependency ‘rlang’ is not available for package ‘cachem’
* removing ‘/tmp/tmp/built/cachem’
ERROR: dependency ‘rlang’ is not available for package ‘ellipsis’
* removing ‘/tmp/tmp/built/ellipsis’
ERROR: dependency ‘rlang’ is not available for package ‘lifecycle’
* removing ‘/tmp/tmp/built/lifecycle’
ERROR: dependency ‘rlang’ is not available for package ‘pkgload’
* removing ‘/tmp/tmp/built/pkgload’
ERROR: dependencies ‘rlang’, ‘cachem’ are not available for package ‘memoise’
* removing ‘/tmp/tmp/built/memoise’
ERROR: dependencies ‘lifecycle’, ‘rlang’ are not available for package ‘vctrs’
* removing ‘/tmp/tmp/built/vctrs’
ERROR: dependencies ‘ellipsis’, ‘rlang’ are not available for package ‘htmltools’
* removing ‘/tmp/tmp/built/htmltools’
ERROR: dependencies ‘lifecycle’, ‘rlang’, ‘vctrs’ are not available for package ‘pillar’
* removing ‘/tmp/tmp/built/pillar’
ERROR: dependencies ‘rlang’, ‘htmltools’ are not available for package ‘sass’
* removing ‘/tmp/tmp/built/sass’
ERROR: dependencies ‘rlang’, ‘htmltools’ are not available for package ‘fontawesome’
* removing ‘/tmp/tmp/built/fontawesome’
ERROR: dependency ‘htmltools’ is not available for package ‘jquerylib’
* removing ‘/tmp/tmp/built/jquerylib’
ERROR: dependencies ‘lifecycle’, ‘rlang’, ‘vctrs’ are not available for package ‘stringr’
* removing ‘/tmp/tmp/built/stringr’
ERROR: dependencies ‘lifecycle’, ‘pillar’, ‘rlang’, ‘vctrs’ are not available for package ‘tibble’
* removing ‘/tmp/tmp/built/tibble’
ERROR: dependencies ‘cachem’, ‘htmltools’, ‘jquerylib’, ‘lifecycle’, ‘memoise’, ‘rlang’, ‘sass’ are not available for package ‘bslib’
* removing ‘/tmp/tmp/built/bslib’
ERROR: dependency ‘tibble’ is not available for package ‘rematch2’
* removing ‘/tmp/tmp/built/rematch2’
ERROR: dependencies ‘bslib’, ‘fontawesome’, ‘htmltools’, ‘jquerylib’, ‘stringr’ are not available for package ‘rmarkdown’
* removing ‘/tmp/tmp/built/rmarkdown’
ERROR: dependencies ‘rematch2’, ‘rlang’, ‘tibble’ are not available for package ‘waldo’
* removing ‘/tmp/tmp/built/waldo’
ERROR: dependencies ‘lifecycle’, ‘pkgload’, ‘rlang’, ‘waldo’ are not available for package ‘testthat’
* removing ‘/tmp/tmp/built/testthat’

The downloaded source packages are in
	‘/tmp/RtmpDuFTzH/downloaded_packages’
There were 19 warnings (use warnings() to see them)

real	0m15.950s
user	0m11.609s
sys	0m4.769s
